<?xml version="1.0"?>
<package>
  <name>thormang3_walking_module</name>
  <version>0.0.0</version>
  <description>The walking_module package</description>

  <maintainer email="hjsong@robotis.com">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_walking_module_msgs</build_depend>
  <build_depend>thormang3_kinematics_dynamics</build_depend>
  <build_depend>thormang3_balance_control</build_depend>
  
  <run_depend>robotis_device</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>